Fixed z-index issue with picks and users

--- a/styles/LeagueView.module.scss
+++ b/styles/LeagueView.module.scss
@@ -19,6 +19,7 @@ div.usersContainer {
   position: sticky;
   top: 0;
   padding: 10px;
+  z-index: 1000;
 }
 
 div.users {
